[package]
name = "axum-required-headers"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
axum-required-headers-macro = { path = "./axum-required-headers-macro" }
http = "1.4.0"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
trybuild = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
