[package]
name = "axum-required-headers-derive"
description = "Derive macros for the 'axum-required-headers' crate"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.4.0"
proc-macro2 = "1"
quote = "1"
syn = { version = "2" }
