[package]
name = "axum-required-headers"
description = "Required (and optional) headers extension extractors for axum projects"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { version = "0.8" }
axum-required-headers-derive = { path = "../axum-required-headers-derive" }
http = "1"
serde_json = "1"
thiserror = "2"

[dev-dependencies]
http-body-util = "0.1.3"
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.3"
trybuild = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
