[package]
name = "missing-axum-test"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "test"
path = "test.rs"

[dependencies]
axum-required-headers-macros = { path = "../../../axum-required-headers-macros" }
# axum is intentionally missing to test the error message
http = "1"

[package.metadata.cargo-machete]
ignored = ["http"]
