[workspace]

[package]
name = "missing-axum-test"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "test"
path = "test.rs"

[dependencies]
axum-required-headers-derive = { path = "../../../../axum-required-headers-derive" }
# axum is intentionally missing to test the error message
http = "1"

[package.metadata.cargo-machete]
ignored = ["http"]
