[workspace]

[package]
name = "missing-http-test"
version = "0.0.0"
edition = "2024"
publish = false

[[bin]]
name = "test"
path = "test.rs"

[dependencies]
axum-required-headers-macros = { path = "../../../../axum-required-headers-macros" }
axum = "0.8"
# http is intentionally missing to test the error message

[package.metadata.cargo-machete]
ignored = ["axum"]
